tests/errors/bad_arg_count.ptt
add(a int, b int) int { give a + b }
spark { yell(add(1)) }
